[gd_scene load_steps=12 format=3 uid="uid://fdbp1qdi17s3"]

[ext_resource type="Script" path="res://Scripts/upgrade_menu.gd" id="1_bp72e"]
[ext_resource type="Theme" uid="uid://cn78xuuxh7qik" path="res://Assets/UI/GameTheme.tres" id="1_xbxcg"]
[ext_resource type="Theme" uid="uid://eo5p87uidknn" path="res://Assets/UI/theme.tres" id="2_ouosi"]
[ext_resource type="Texture2D" uid="uid://dq61t5kydujje" path="res://Assets/Sprites/Icons/acceleration_icon.png" id="3_fs6c1"]
[ext_resource type="LabelSettings" uid="uid://0sbqmy8y504a" path="res://Assets/UI/Text.tres" id="4_acp5i"]
[ext_resource type="Texture2D" uid="uid://bg14umaeng1hn" path="res://Assets/Sprites/new_ship.png" id="5_580bs"]
[ext_resource type="Texture2D" uid="uid://di742xqj1wtk6" path="res://Assets/Sprites/Icons/shield.png" id="6_svd72"]
[ext_resource type="Texture2D" uid="uid://i2xq61qtowg" path="res://Assets/Sprites/Icons/bolt.png" id="7_ikus7"]
[ext_resource type="Texture2D" uid="uid://cq66xdmuxcy78" path="res://Assets/Sprites/Icons/rafinery.png" id="8_bpcux"]
[ext_resource type="LabelSettings" uid="uid://dkbci8bsiy8k2" path="res://Assets/UI/label.tres" id="11_oy83b"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vxjso"]

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 518.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xbxcg")

[node name="UI" type="CanvasLayer" parent="."]
offset = Vector2(0, 531)
transform = Transform2D(1, 0, 0, 1, 0, 531)
follow_viewport_enabled = true
script = ExtResource("1_bp72e")
popup_anim_duration = 0.2

[node name="AccelerationButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.061
anchor_top = 0.041
anchor_right = 0.182
anchor_bottom = 0.109
offset_left = -3.071
offset_top = 67.029
offset_right = -2.802
offset_bottom = 68.321
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_ouosi")

[node name="Icon" type="TextureRect" parent="UI/AccelerationButton"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.22
anchor_top = 0.24
anchor_right = 0.72
anchor_bottom = 0.74
texture = ExtResource("3_fs6c1")
expand_mode = 1

[node name="CostText" type="Label" parent="UI/AccelerationButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 1.165
anchor_right = 1.0
anchor_bottom = 1.625
offset_left = 0.00499964
offset_top = 0.00499725
offset_right = 18.205
offset_bottom = 0.00498962
text = "10
"
label_settings = ExtResource("4_acp5i")

[node name="Ressources" type="TextureRect" parent="UI/AccelerationButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 1.2
anchor_right = 1.0
anchor_bottom = 1.6
offset_right = -2.0
texture = ExtResource("5_580bs")
expand_mode = 1

[node name="ShieldButton" type="Button" parent="UI"]
anchors_preset = -1
anchor_left = 0.253
anchor_top = 0.038
anchor_right = 0.377
anchor_bottom = 0.109
offset_left = -1.98301
offset_top = 69.222
offset_right = -2.94701
offset_bottom = 68.321
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_ouosi")

[node name="Icon" type="TextureRect" parent="UI/ShieldButton"]
modulate = Color(1, 1, 1, 0.643137)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.2
anchor_right = 0.74
anchor_bottom = 0.8
texture = ExtResource("6_svd72")
expand_mode = 1

[node name="CostText" type="Label" parent="UI/ShieldButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.165
anchor_right = 0.5
anchor_bottom = 1.625
offset_left = 2.205
offset_top = 0.00499725
offset_right = 43.205
offset_bottom = 0.00498962
text = "10
"
label_settings = ExtResource("4_acp5i")

[node name="Ressources" type="TextureRect" parent="UI/ShieldButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 1.2
anchor_right = 0.96
anchor_bottom = 1.6
texture = ExtResource("5_580bs")
expand_mode = 1

[node name="GeneratorButton" type="Button" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.041
anchor_right = 0.572
anchor_bottom = 0.109
offset_left = -2.95001
offset_top = 67.029
offset_right = -3.09201
offset_bottom = 68.321
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_ouosi")

[node name="Icon" type="TextureRect" parent="UI/GeneratorButton"]
modulate = Color(1, 1, 1, 0.690196)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.16
anchor_right = 0.74
anchor_bottom = 0.86
texture = ExtResource("7_ikus7")
expand_mode = 1

[node name="CostText" type="Label" parent="UI/GeneratorButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 1.165
anchor_right = 0.5
anchor_bottom = 1.625
offset_left = 0.00499964
offset_top = 0.00499725
offset_right = 43.205
offset_bottom = 0.00498962
text = "10
"
label_settings = ExtResource("4_acp5i")

[node name="Ressources" type="TextureRect" parent="UI/GeneratorButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 1.2
anchor_right = 0.96
anchor_bottom = 1.6
texture = ExtResource("5_580bs")
expand_mode = 1

[node name="RafineryButton" type="Button" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.645
anchor_top = 0.041
anchor_right = 0.766
anchor_bottom = 0.109
offset_left = -3.09503
offset_top = 67.029
offset_right = -2.82602
offset_bottom = 68.321
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_ouosi")

[node name="Icon" type="TextureRect" parent="UI/RafineryButton"]
modulate = Color(1, 1, 1, 0.682353)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.16
anchor_right = 0.76
anchor_bottom = 0.72
texture = ExtResource("8_bpcux")
expand_mode = 1

[node name="CostText" type="Label" parent="UI/RafineryButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 1.165
anchor_right = 1.364
anchor_bottom = 1.625
offset_left = 0.00499964
offset_top = 0.00499725
offset_right = 0.00499725
offset_bottom = 0.00498962
text = "10
"
label_settings = ExtResource("4_acp5i")

[node name="Ressources" type="TextureRect" parent="UI/RafineryButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 1.2
anchor_right = 1.0
anchor_bottom = 1.6
offset_right = -2.0
texture = ExtResource("5_580bs")
expand_mode = 1

[node name="LaboratoryButton" type="Button" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.839
anchor_top = 0.041
anchor_right = 0.961
anchor_bottom = 0.109
offset_left = -2.82901
offset_top = 67.029
offset_right = -2.97101
offset_bottom = 68.321
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_ouosi")

[node name="Icon" type="TextureRect" parent="UI/LaboratoryButton"]
modulate = Color(1, 1, 1, 0.67451)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24
anchor_top = 0.2
anchor_right = 0.74
anchor_bottom = 0.7
texture = SubResource("CompressedTexture2D_vxjso")
expand_mode = 1

[node name="CostText" type="Label" parent="UI/LaboratoryButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.044
anchor_top = 1.165
anchor_right = 1.364
anchor_bottom = 1.625
offset_left = 0.00499964
offset_top = 0.00499725
offset_right = 0.00499725
offset_bottom = 0.00498962
text = "10
"
label_settings = ExtResource("4_acp5i")

[node name="Ressources" type="TextureRect" parent="UI/LaboratoryButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.56
anchor_top = 1.2
anchor_right = 1.0
anchor_bottom = 1.6
offset_right = -2.0
texture = ExtResource("5_580bs")
expand_mode = 1

[node name="ThresholdSlider" type="HSlider" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.421
anchor_top = 0.213
anchor_right = 0.964
anchor_bottom = 0.227
offset_left = 15.969
offset_top = -107.703
offset_right = 15.796
offset_bottom = -101.937
theme = ExtResource("2_ouosi")

[node name="Label" type="Label" parent="UI/ThresholdSlider"]
layout_mode = 1
anchors_preset = -1
anchor_top = -1.625
anchor_right = 0.049
offset_left = -1.0
offset_right = 0.072999
offset_bottom = 4.0
text = "0"
label_settings = ExtResource("4_acp5i")

[node name="Label2" type="Label" parent="UI/ThresholdSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.897
anchor_top = -1.687
anchor_right = 1.022
anchor_bottom = 0.187
offset_left = -0.0310059
offset_top = -0.00799942
offset_right = 0.0939789
offset_bottom = 0.0079999
text = "100"
label_settings = ExtResource("4_acp5i")

[node name="Treshold" type="Label" parent="UI/ThresholdSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.462
anchor_top = -1.375
anchor_right = 0.574
anchor_bottom = -0.062
offset_left = -0.026001
offset_top = -2.0
offset_right = -0.0019989
offset_bottom = -0.00799996
text = "5
"
label_settings = ExtResource("4_acp5i")

[node name="Label4" type="Label" parent="UI/ThresholdSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.202
anchor_top = -2.75
anchor_right = 0.794
anchor_bottom = -1.313
offset_left = -0.0460014
offset_right = -0.0620117
offset_bottom = 0.00799561
text = "SEND TRESHOLD"
label_settings = ExtResource("11_oy83b")

[node name="SpellButton" type="Button" parent="UI"]
visible = false
anchors_preset = -1
anchor_left = 0.029
anchor_top = 0.187
anchor_right = 0.27
anchor_bottom = 0.254
offset_left = 54.081
offset_top = -103.697
offset_right = 54.03
offset_bottom = -103.674
theme = ExtResource("2_ouosi")

[node name="Spell" type="Label" parent="UI/SpellButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.404
anchor_top = -0.481
anchor_right = 0.879
anchor_bottom = -0.082
offset_left = 5.004
offset_top = -0.430998
offset_right = 5.979
offset_bottom = 3.018
text = "SPELL
"
label_settings = ExtResource("11_oy83b")

[node name="Cost" type="Label" parent="UI/SpellButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.061
anchor_top = 0.327
anchor_right = 1.465
anchor_bottom = 0.796
offset_left = 3.96099
offset_top = -1.023
offset_right = 3.965
offset_bottom = -1.004
text = "10 Â¤"
label_settings = ExtResource("4_acp5i")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.275
offset_right = -1.0
offset_bottom = -0.0250092
size_flags_vertical = 3

[connection signal="pressed" from="UI/AccelerationButton" to="UI" method="_on_acceleration_button_pressed"]
[connection signal="pressed" from="UI/ShieldButton" to="UI" method="_on_shield_button_pressed"]
[connection signal="pressed" from="UI/GeneratorButton" to="UI" method="_on_generator_button_pressed"]
[connection signal="pressed" from="UI/RafineryButton" to="UI" method="_on_rafinery_button_pressed"]
